[package]
name = "extendr_polars"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rpolars/extendr-polars"
description = "extendr bindings to polars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars-core = { version = "0.31.1", default_features = false }
polars-plan = { version = "0.31.1", default_features = false, optional = true }
polars-lazy = { version = "0.31.1", default_features = false, optional = true }

thiserror = "1"
arrow2 = "0.17"
ciborium = { version = "0.2.0", optional = true }
extendr-api = "*"


[dependencies.polars]
features = [
    "dtype-struct",
]
default-features = false

[features]
lazy = ["polars/serde-lazy", "polars-plan", "polars-lazy", "ciborium"]
