[package]
name = "extendr_polars"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rpolars/extendr-polars"
description = "extendr bindings to polars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "*", default_features = false, features = ["dtype-struct"]}
polars-core = { version = "*", default_features = false }
polars-plan = { version = "*", default_features = false, optional = true }
polars-lazy = { version = "*", default_features = false, optional = true }
thiserror = "1"
ciborium = { version = "0.2.0", optional = true }
extendr-api = "*"




[features]
lazy = ["polars/serde-lazy", "polars-plan", "polars-lazy", "ciborium"]
